# sideshow

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  inky-frame.code-workspace
.cargo/: config.toml
case/: inkyframe4_back.stl  inkyframe4_buttons.stl  inkyframe4_buttons_large.stl  inkyframe4_front.stl
src/: main.rs  sideshow.rs
utils/: serial_read.py
