[package]
name                = "sideshow"
readme              = "README.md"
authors             = [ "secfurry" ]
edition             = "2024"
license             = "MIT"
publish             = true
version             = "0.1.0"
keywords            = [ "pico", "embedded", "pinorami", "inky_frame", "eink" ]
categories          = [ "no-std", "embedded", "multimedia::images" ]
repository          = "https://github.com/secfurry/sideshow"
description         = "Picture display library for the InkyFrame series of Raspberry PiPico(W) combo boards."

[[bin]]
doc                 = true
name                = "sideshow"
path                = "src/main.rs"
test                = false
bench               = false
doctest             = false
edition             = "2024"

[dependencies]
## Local Development Only
# rpsp                = { path = "./rpsp", default-features = false, features = [ "pico" ] }
# inky-frame          = { path = "./inky-frame", default-features = true, features = [ "static" ] }
#
rpsp                = { version = "0.1.4", default-features = false, features = [ "pico" ] }
inky-frame          = { version = "0.2.0", default-features = true, features = [ "static" ] }
cortex-m-rt         = { version = "0.7.5", default-features = false }

[features]
default             = []
inky5               = [ "inky-frame/static_large" ]
debug               = [ "rpsp/debug", "inky-frame/debug" ]

[profile.dev]
debug               = 2
strip               = false
opt-level           = 3
incremental         = false
codegen-units       = 1
overflow-checks     = true
debug-assertions    = true

[profile.release]
lto                 = "fat"
panic               = "abort"
debug               = false
strip               = true
opt-level           = 3
incremental         = false
codegen-units       = 1
overflow-checks     = false
debug-assertions    = false

[package.metadata.docs.rs]
target              = [ "thumbv6m-none-eabi" ]
features            = [ "cyw", "debug" ]
default-target      = "thumbv6m-none-eabi"
no-default-features = false
